# EVWorkplaceChargingPublic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/charging_costs/: 2023-02-01.csv  2023-02-02.csv  2023-02-03.csv  2023-02-04.csv  2023-02-05.csv  2023-02-06.csv  2023-02-07.csv  2024-02-01.csv  2024-02-02.csv  2024-02-03.csv  2024-02-04.csv  2024-02-05.csv  2024-02-06.csv  2024-02-07.csv
data/grid_carbon_intensity/: DE_2021_hourly.csv  DE_2022_hourly.csv  DE_2023_hourly.csv  DE_2024_hourly.csv
data/metrics/: 01_2024-02-01_ccm_100_11.csv  01_2024-02-01_ccm_15_11.csv  01_2024-02-01_ccm_30_11.csv  01_2024-02-01_ccm_50_11.csv  01_2024-02-01_ccm_80_11.csv  01_2024-02-01_cem_100_11.csv  01_2024-02-01_cem_15_11.csv  01_2024-02-01_cem_30_11.csv  01_2024-02-01_cem_50_11.csv  01_2024-02-01_cem_80_11.csv  01_2024-02-01_ps_100_11.csv  01_2024-02-01_ps_15_11.csv  01_2024-02-01_ps_30_11.csv  01_2024-02-01_ps_50_11.csv  01_2024-02-01_ps_80_11.csv  01_2024-02-02_ccm_100_11.csv  01_2024-02-02_ccm_15_11.csv  01_2024-02-02_ccm_30_11.csv  01_2024-02-02_ccm_50_11.csv  01_2024-02-02_ccm_80_11.csv  01_2024-02-02_cem_100_11.csv  01_2024-02-02_cem_15_11.csv  01_2024-02-02_cem_30_11.csv  01_2024-02-02_cem_50_11.csv  01_2024-02-02_cem_80_11.csv  01_2024-02-02_ps_100_11.csv  01_2024-02-02_ps_15_11.csv  01_2024-02-02_ps_30_11.csv  01_2024-02-02_ps_50_11.csv  01_2024-02-02_ps_80_11.csv  01_2024-02-03_ccm_100_11.csv  01_2024-02-03_ccm_15_11.csv  01_2024-02-03_ccm_30_11.csv  01_2024-02-03_ccm_50_11.csv  (+1121 more)
ev_workplace_charging/: company_configs.py  dashboard.py  extract_metrics_from_outputs.py  run_for_companies.py  run_models.py  settings.py  visualize_input_data.py  visualize_metrics.py
(+1161 files in other folders)
