[tool.poetry]
name = "ev_workplace_charging"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ev_workplace_charging"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"
scipy = "^1.14.1"
pyomo = "^6.8.2"
gurobipy = "^12.0.0"
joblib = "^1.4.2"
tqdm = "^4.67.0"
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
translate = "report_translator.translate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
