[project]
name = "ev_workplace_charging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "pyomo>=6.9.4",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
