[project]
name = "ev_workplace_charging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.7.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyomo>=6.9.4",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
